Changed layout for FlexBox, Added new calculator  HTML / CSS page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="BG" lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,23 +15,23 @@
                     <a href=""><img draggable="false" src="img/logo.svg" alt="Churrascolator"></a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">Sobre</a>
+                    <a href="sobre.html">Sobre</a>
                 </li>
                 <li class="menu-item btn-black">
-                    <button>Calculadora</button>
+                    <a href="calculator.html" class="">Calculadora</a>
                 </li>
             </ul>        
         </nav>
     </header>
     
-    <section>
-        <div class="Intro">
+    <section class="container">
+        <div class="intro">
             <h1>Deixe a parte chata com a gente!</h1>
             <p>Calcule quanta carne será necessária para seu churrasco, evitando constrangimentos e desperdícios.</p>
-            <button class="btn">Calcule Agora</button>
+            <a class="btn" href="calculator.html">Calcule Agora</a>
         </div>
     </section>
 </body>
