Ordered List of calculator.html - Done

--- a/calculator.html
+++ b/calculator.html
@@ -28,14 +28,43 @@
         </nav>
     </header>
     <div class="container">
-        <section class="Intro">
+        <section class="intro">
             <h1>Vamos calcular?</h1>
             <p>Calcule quanta carne e outros mantimentos serão necessários para seu churrasco, evitando constrangimentos e desperdícios.</p>
             <p class="warning">** Os dados disponibilizados são uma estimativa, os valores podem variar para mais ou para menos. **</p>
             <div class="calculator">
-                <p class="question">Quantos <b>adultos</b> irão participar do Churrasco?</p>
-                <span class="spinner-input">
-                    <button class="spinner-btn left">-</button><input type="number" value="1" name="adultsQt" id="adultsQuantity"><button class="spinner-btn right">+</button></span>
+                <ol>
+                    <li class="question"><span class="ask">Quantos adultos irão participar do Churrasco?</span> 
+                        <span class="spinner-input">
+                            <div>
+                                <button class="spinner-btn left">-</button>
+                                <input type="number" value="1" name="adultsQt" id="adultsQuantity">
+                                <button class="spinner-btn right">+</button> 
+                            </div>
+                                <div class="spinner-label">Adultos</div>
+                        </span>                                          
+                    </li>                                    
+                    <li class="question"><span class="ask">Quantos adultos irão participar do Churrasco?</span> 
+                        <span class="spinner-input">
+                            <div>
+                                <button class="spinner-btn left">-</button>
+                                <input type="number" value="1" name="adultsQt" id="adultsQuantity">
+                                <button class="spinner-btn right">+</button> 
+                            </div>
+                                <div class="spinner-label">Adultos</div>
+                        </span>                                          
+                    </li>                                    
+                    <li class="question"><span class="ask">Quantos adultos irão participar do Churrasco?</span> 
+                        <span class="spinner-input">
+                            <div>
+                                <button class="spinner-btn left">-</button>
+                                <input type="number" value="1" name="adultsQt" id="adultsQuantity">
+                                <button class="spinner-btn right">+</button> 
+                            </div>
+                                <div class="spinner-label">Adultos</div>
+                        </span>                                          
+                    </li>                                    
+                </ol>             
             </div>
     </section>
     <section class="results">
