Added Result Container in calculator.html

--- a/calculator.html
+++ b/calculator.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/calculator.css">
+    <link rel="stylesheet" href="css/mediaQueries.css">
     <title>Churrascolator - Calcule seu Churrasco agora</title>
 </head>
 <body>
@@ -68,8 +69,46 @@
             </div>
     </section>
     <section class="results">
-        <div style="background-color: aqua; height: 500px;"></div>
+        <div class="meat-result box">
+            <div class="result-label">Carne</div>
+            <div class="bar">
+                <div class="result-bar">03</div>
+            </div>
+            <div class="unity">
+                <span>Unidade</span>
+                <span class="unt-label">Kilogramas</span>
+            </div>
+        </div>
+        <div class="beer-result box">
+            <div class="result-label">Breja</div>
+            <div class="bar">
+                <div class="result-bar">03</div>
+            </div>
+            <div class="unity">
+                <span>Unidade</span>
+                <span class="unt-label">Latinhas (200ml)</span>
+            </div>
+        </div>
+        <div class="soda-result box">
+            <div class="result-label">Refri</div>
+            <div class="bar">
+                <div class="result-bar">03</div>
+            </div>
+            <div class="unity">
+                <span>Unidade</span>
+                <span class="unt-label">Garrafas (2 litros)</span>
+            </div>
+        </div>
+        <div class="money-result box">
+            <div class="result-label">Pratas</div>
+            <div class="bar">
+                <div class="result-bar">200,00</div>
+            </div>
+            <div class="unity">
+                <span>Valor estimado</span>
+                <span class="unt-label">Reais (R$)</span>
+            </div>
+        </div>
     </section>
-    </div>
 </body>
 </html>
